# RSE

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  EraseSln.cmd  GenerateSln.cmd  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RSE.code-workspace  RSE.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CSTest/: CSTest.csproj  Program.cs
Platformer/: CMakeLists.txt
Platformer/src/: main.cpp
RCLRW/: CMakeLists.txt  RCLRW.vcxproj  RCLRW.vcxproj.filters  cmake_install.cmake
RCLRW/src/: RCLRW.cpp
RCLRW/src/include/: RCLRW.h
RSE/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RSE.vcxproj  RSE.vcxproj.filters  TODO.txt  cmake_install.cmake
RSE/include/: RSE.h
RSE/pch/: sdafx.h
RSE/src/Core/: Core.cpp  Input.cpp  Map.cpp  ResourceHandler.cpp  Serializer.cpp  Texture2D.cpp
RSE/src/Core/ECS/: BoxCollider2D.cpp  Camera2DComponent.cpp  ECS.cpp  Sprite.cpp  SpriteSheetAnimation.cpp  TransformComponent.cpp
RSE/src/Core/ECS/include/: Behaviour.h  BoxCollider2D.h  Camera2DComponent.h  Components.h  ECS.h  NativeBehaviour.h  NativeBehaviourComponent.h  Sprite.h  SpriteSheetAnimation.h  TileMapComponent.h  TilemapCollider2D.h  TilemapComponent.h  TransformComponent.h
RSE/src/Core/include/: Collision.h  Core.h  Geometry.h  Input.h  Map.h  RException.h  ResourceHandler.h  Serializer.h  Texture2D.h  Transform.h  Vector2.h
RSE/src/Math/include/: Mathf.h
RSE/src/Util/: xstdf.h
SDL/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  SDL2-static.vcxproj  SDL2-static.vcxproj.filters  SDL2.sln  SDL2.vcxproj  SDL2.vcxproj.filters  SDL2_test.vcxproj  SDL2_test.vcxproj.filters  SDL2main.vcxproj  SDL2main.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  sdl2.pc  sdl_headers_copy.vcxproj  sdl_headers_copy.vcxproj.filters  uninstall.vcxproj  uninstall.vcxproj.filters
SDL/include/: SDL_revision.h
SDL_image/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  SDL2_image.sln  SDL2_image.vcxproj  SDL2_image.vcxproj.filters  cmake_install.cmake
TestGame/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  TestGame.vcxproj  TestGame.vcxproj.filters  cmake_install.cmake
TestGame/src/: PlayerController.cpp  main.cpp
TestGame/src/include/: EnemyAI.h  PlayerController.h  Projectile.h  Wall.h
data/: actormgr.rse
data/Base.rse/Environment/Levels/: collisionTest.rym  mgr.rym  mgr.rym.old  mgr.rym.rbin  mgr1.rym
fmt/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  FMT.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  fmt-targets.cmake  fmt.pc  fmt.vcxproj  fmt.vcxproj.filters
linux-build-ninja/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
linux-build-ninja/TestGame/: TestGame
mswin32-build-ninja/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
mswin32-build-ninja/TestGame/Base.rse/Environment/Levels/: mgr.rym
mswin32-build-ninja/TestGame/assets/: actormgr.rse
scripts/: build_cmake.pl  build_testgame.sh  clean.pl  dsfx.pl  erase.pl  erase_build_vs.pl  gen_build_cmake.pl  gen_build_ninja.pl  generate_build_cmake.pl  generate_build_vs.pl
yaml-cpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  YAML_CPP.sln  cmake_install.cmake  yaml-cpp.vcxproj  yaml-cpp.vcxproj.filters
yaml-cpp/util/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  yaml-cpp-parse.vcxproj  yaml-cpp-parse.vcxproj.filters  yaml-cpp-read.vcxproj  yaml-cpp-read.vcxproj.filters  yaml-cpp-sandbox.vcxproj  yaml-cpp-sandbox.vcxproj.filters
